# whisper.cpp

./: CMakeLists.txt  Makefile  whisper.cpp
bindings/go/: params.go
bindings/javascript/: package.json
cmake/: build-info.cmake
examples/: CMakeLists.txt  common-portaudio.cpp  common-portaudio.h  common.h  console.cpp
examples/main/: main.cpp
examples/server/: server.cpp
examples/stream-portaudio/: CMakeLists.txt  ollama.hpp  stream-portaudio.cpp
include/: whisper.h
src/: whisper.cpp
